Support for proprietary style property to allow composer to force broken image icons. b=58646 r=karnaze sr=kin a=asa