layout/style/nsStyleStruct.h
@@ -1092,6 +1092,7 @@ struct nsStyleUIReset: public nsStyleStruct {
   PRUint8   mUserSelect;      // [reset] (selection-style)
   PRUnichar mKeyEquivalent;   // [reset] XXX what type should this be?
   PRUint8   mResizer;         // [reset]
+  PRUint8   mForceBrokenImageIcon; // [reset]  (0 if not forcing, otherwise forcing)
 };
 
 struct nsStyleUserInterface: public nsStyleStruct {
